# gemini-documentation

./: .gitignore  .readthedocs.yaml  README.md  build_doc.bat  pyproject.toml  requirements.txt
ci/linux/: build_doc.sh
ci/windows/: build_doc.bat
source/: about_gemini_overview.rst  application_esp.rst  application_grafana.rst  application_injectivity.rst  application_parameters_overview.rst  application_production_well_performance.rst  application_rag.rst  application_report_generator.rst  application_well_schematics.rst  application_wellintegrity.rst  basics_info.rst  basics_main_page.rst  basics_settings.rst  code.rst  code_application.rst  code_framework.rst  code_model.rst  conf.py  esp.rst  framework.rst  glossary.rst  grafana.rst  index.rst  index_about_gemini.rst  index_applications.rst  index_getting_started.rst  index_modules.rst  index_other_pages.rst  index_setup.rst  index_system_basics.rst  injectivity.rst  installation.rst  model.rst  other_errors.rst  project.rst  start_installation.rst  start_login.rst  start_main_page.rst  start_projects.rst
