[tool.poetry]
name = "gemini-documentation"
version = "0.1.0"
description = "Documentation of the GEMINI Digital Twin"
authors = ["Ryvo Octaviano <ryvo.octaviano@tno.nl>"]
readme = "README.md"
packages = [{ include = "source" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
homepage = "https://nwn.nu/projecten/innovaties/datagedreven-optimalisatie-aardwarmte-systemen/"
documentation = "https://readthedocs.org"
repository = "https://github.com/GEMINI-Digital-Twin/gemini-documentation"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6.1.0"
sphinx_rtd_theme ="^1.2.0"
pytest-sphinx = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

